--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react-datepicker": "^3.0.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "react": "^17.0.2",
-    "react-datepicker": "^4.8.0",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-flexbox-grid": "^2.1.2",
     "react-html-parser": "^2.0.2",
@@ -26,8 +27,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --colors",
     "eject": "react-scripts eject",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors",
     "lint": "eslint src/"
   },
   "husky": {
