--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react-datepicker": "^3.0.0",
     "husky": "1.3.1",
+    "json-server": "^0.17.0",
     "lint-staged": "8.1.5",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
@@ -25,7 +26,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p server:*",
+    "server:api": "node server.js",
+    "server:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest --colors",
     "eject": "react-scripts eject",
@@ -58,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
